# Multi-Agents-LangChain

./: agent_logic.py  chains.py  main.py  models.py  pyproject.toml  qa.md  workflow.py
chat_llm/: app.py
context/: eng_m.py  pms.py  researcher.py  socrates.py  tech_lead.py
pages/: eng_manager_output.py  pm1.py  pm2.py  pm_chatbot.py  researcher_output.py  setting_params.py  socrates_output.py
